<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sportsmanagement.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.sportsmanagement.ui.fragment.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories">
        
        <action
            android:id="@+id/action_categories_to_category_detail"
            app:destination="@id/categoryDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_matches"
        android:name="com.example.sportsmanagement.ui.fragment.MatchesFragment"
        android:label="@string/title_matches"
        tools:layout="@layout/fragment_matches">
        
        <action
            android:id="@+id/action_matches_to_match_detail"
            app:destination="@id/matchDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.sportsmanagement.ui.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/categoryDetailFragment"
        android:name="com.example.sportsmanagement.ui.fragment.CategoryDetailFragment"
        android:label="Category Details"
        tools:layout="@layout/fragment_category_detail">
        
        <argument
            android:name="categoryId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/matchDetailFragment"
        android:name="com.example.sportsmanagement.ui.fragment.MatchDetailFragment"
        android:label="Match Details"
        tools:layout="@layout/fragment_match_detail">
        
        <argument
            android:name="matchId"
            app:argType="string" />
    </fragment>

</navigation>